# SouthOfTethys

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  compose.debug.yaml  compose.yaml  dataset_card.md  dataset_infos.json  docker-compose.chroma.yml  docker-compose.yaml  index.md  pyproject.toml  release_process.ipynb  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  index_changes_sandbox.yml  jekyll-gh-pages.yml  push-hf-model.yml  story-validation.yml  update-chroma-incremental.yml  vidur_portal.yml
cartography/: interactive_map.html  overworld.json  regions.geojson
characters/: ElderMoss.json  EliaAkaran.json  genealogy.json  leafkin.md
docs/: PUBLISHING.md  README.md  README_generated.md  _config.yml  interactive_map.html  overworld.json  regions.geojson  timeline.json
flora_fauna/: SuncrawlerBeetle.json  species_tree.json
model/: README.md  config.json  requirements.txt
scripts/: README.md  check_chroma_cloud.py  index_changes.py
services/chroma/: Dockerfile  README.md  index_chroma_service.py  requirements.txt
services/chroma/schemas/: README.md  characters.schema.json  documents.schema.json  (+3 more)
snippets/inbox/: queen_envoy.txt
timeline/: timeline_mermaid.md
utils/: 4000BCSaraswaty_load.py  evolve_species.py  generate_map.py  generate_timeline.py  generate_timeline_mermaid.py  hometown.py  index_chroma.py  lint_story.py  snippet_processor.py  test_hf_push.py
vidur_portal/: Dockerfile  README.md  app.py  requirements.txt  snippet_processor.py
(+4 files in other folders)
